--- a/clients/web-app/package.json
+++ b/clients/web-app/package.json
@@ -10,22 +10,33 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@headlessui/react": "^2.2.8",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "daisyui": "^5.1.14",
+    "gsap": "^3.13.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.19",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
-    "zod": "^4.1.11"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.11",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@biomejs/biome": "2.2.0",
+    "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
-    "@biomejs/biome": "2.2.0"
-  }
+    "typescript": "^5"
+  },
+  "browserslist": "> 1%"
 }
