Create MongoDB repositories

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "create-tables:dev": "nest build && npx dotenv-cli -e .env.development -- node ./dist/src/create-dynamodb-tables.js",
     "start:dev": "npx dotenv-cli -e .env.development -- nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -27,6 +28,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.2",
+    "mongoose": "^8.18.3",
     "nestjs-zod": "^5.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
