Create get-recent-releases use-case and unit tests

--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "mongoose": "^8.18.3",
     "nestjs-zod": "^5.0.1",
