Create prismaio database interface for users

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -24,8 +24,11 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@prisma/*": [
+        "./generated/*"
       ]
     },
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": false,
+  },
 }
