--- a/clients/web-app/package.json
+++ b/clients/web-app/package.json
@@ -14,6 +14,8 @@
     "@headlessui/react": "^2.2.8",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-next-experimental": "^5.90.2",
     "class-variance-authority": "^0.7.1",
     "daisyui": "^5.1.14",
     "date-fns": "^4.1.0",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
