Create get-releases-value use-case with unit tests

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -29,6 +29,6 @@
         "./generated/*"
       ]
     },
-    "noFallthroughCasesInSwitch": false,
-  },
+    "noFallthroughCasesInSwitch": false
+  }
 }
